--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -69,7 +69,6 @@
  */
 
 @import 'variables.less';
-@import 'social.less';
 @import 'cloud_plugins.less';
 @import 'banks.less';
 @import 'pedalboards.less';
@@ -426,6 +425,9 @@ hr.dotted {
     }
 
   .status {
+    background-color: #111;
+    background-position: 3px 50%;
+    background-size: 36px;
     background-repeat: no-repeat;
     border-color: #2b2b2b;
     border-style: solid;
