--- a/html/css/main.css
+++ b/html/css/main.css
@@ -5502,548 +5502,6 @@ button.close {
  * This is our main variables file. We must include it last so we can overwrite any variable
  * definitions in our imported stylesheets.
  */
-#mod-social-network {
-  background: #2c2c2c;
-  bottom: 45px;
-  top: 0;
-  font-size: 15px !important;
-  position: absolute;
-  width: 100%;
-  overflow: auto;
-}
-#mod-social-network > div {
-  /**
-     * Navigation
-     */
-  /*
-    timeline
-    */
-  /*
-    .btn-xs {
-      font-size: 10px !important;
-      vertical-align: top !important;
-      }
-    .btn-xxs {
-      font-size: 0.6em !important;
-      padding: 0.2em 0.4em;
-    }
-    */
-  /**
-     * Modal
-     */
-  /**
-     * Footer
-     */
-  /* Fancy blur effect */
-}
-#mod-social-network > div * {
-  font-family: "cooper hewitt" !important;
-}
-#mod-social-network > div code,
-#mod-social-network > div pre,
-#mod-social-network > div .pre {
-  padding: 5px;
-  margin: 10px 0;
-  background-color: #EFEFEF;
-  border: 1px solid #DADADA;
-  border-radius: 3px;
-}
-#mod-social-network > div code {
-  padding: 0 3px;
-}
-#mod-social-network > div pre {
-  margin: 10px 0;
-  padding: 5px;
-}
-#mod-social-network > div .page-header {
-  margin-top: 60px;
-}
-#mod-social-network > div .page-header:first-child {
-  margin-top: 20px;
-}
-#mod-social-network > div h1 {
-  font-size: 1em;
-  font-weight: bold;
-  color: inherit !important;
-  text-transform: uppercase;
-}
-#mod-social-network > div h1 .glyphicon {
-  color: #883996 !important;
-}
-#mod-social-network > div h2 {
-  font-size: 1.2em;
-  margin: 0.5em 0px 1em 0;
-  line-height: 1.3em;
-}
-#mod-social-network > div h3 {
-  font-size: 1.2em;
-}
-#mod-social-network > div b {
-  font-weight: bold !important;
-}
-#mod-social-network > div h5 {
-  font-size: 1em;
-}
-#mod-social-network > div h4,
-#mod-social-network > div h5 {
-  padding-left: 0em;
-}
-#mod-social-network > div p {
-  font-size: 105%;
-}
-#mod-social-network > div b {
-  color: #883996;
-}
-#mod-social-network > div a {
-  cursor: pointer !important;
-  color: #883996;
-}
-#mod-social-network > div .navbar {
-  margin-bottom: 0 !important;
-  padding: 0;
-  border-radius: 0;
-}
-#mod-social-network > div .navbar .navbar-brand {
-  padding: 0 1em;
-  height: 100%;
-}
-#mod-social-network > div .navbar .navbar-brand img {
-  margin-top: 0.1em;
-  height: 2.5em;
-}
-#mod-social-network > div .navbar small {
-  font-size: 60%;
-}
-#mod-social-network > div .carousel .carousel-indicators {
-  bottom: -35px !important;
-}
-#mod-social-network > div .carousel .carousel-control {
-  background: transparent !important;
-}
-#mod-social-network > div .panel {
-  background-color: #222;
-  padding-bottom: 2em;
-}
-#mod-social-network > div li.active > a {
-  background-color: #883996;
-}
-#mod-social-network > div .profile-stats {
-  background: #2a2a2a;
-  text-align: center;
-  margin-top: 1em;
-  border-radius: 4px;
-  padding: 0;
-  float: left;
-  font-size: 0.7em;
-  border: 1px solid #444;
-  padding: 0.2em 0;
-  margin-top: 0.3em;
-  width: 7em;
-  display: block;
-}
-#mod-social-network > div .profile-stats img {
-  vertical-align: bottom;
-}
-#mod-social-network > div .glyphicon {
-  color: inherit;
-}
-#mod-social-network > div .home-feed {
-  padding-top: 1em;
-  background-color: #222222;
-}
-#mod-social-network > div .reply {
-  padding: 0.5em;
-  color: #b1b1b1;
-  box-shadow: -3px 3px 10px #1a1a1a;
-  border-bottom-left-radius: 0.3em;
-  margin-bottom: 0.2em;
-}
-#mod-social-network > div .reply:hover {
-  color: #fff;
-}
-#mod-social-network > div .reply-buttons {
-  padding-left: 0;
-  width: 4em;
-  font-weight: bold;
-  font-size: 0.8em;
-  display: inline-block;
-}
-#mod-social-network > div .even_gray {
-  background: #2a2a2a;
-}
-#mod-social-network > div .gravatar {
-  box-shadow: -3px 4px 4px #1a1a1a;
-  border-radius: 50% !important;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  border: 1px solid #883996;
-  max-width: 150px;
-  float: left;
-}
-#mod-social-network > div .gravatar.s {
-  max-width: 42px;
-  margin-right: 0.5em;
-}
-#mod-social-network > div .gravatar.m {
-  max-width: 56px;
-  margin-right: 0.5em;
-}
-#mod-social-network > div .gravatar.l {
-  max-width: 72px;
-  margin-right: 0.5em;
-}
-#mod-social-network > div iframe {
-  width: 100%;
-  position: absolute;
-  height: 100%;
-  border: 1px solid #444444;
-}
-#mod-social-network > div .flex-video.widescreen {
-  padding-bottom: 56%;
-}
-#mod-social-network > div .flex-video {
-  position: relative;
-  height: 0px;
-  overflow: hidden;
-}
-#mod-social-network > div .sub-dotted {
-  border-bottom: 1px dotted #883996;
-}
-#mod-social-network > div hr {
-  clear: both !important;
-}
-#mod-social-network > div hr.lg {
-  border-top-color: #333 !important;
-  border-top-width: 3px;
-}
-#mod-social-network > div hr {
-  border-top-width: 0.1em;
-  border-color: #54E775 !important;
-}
-#mod-social-network > div hr.sm {
-  border-top-width: 0.1em;
-}
-#mod-social-network > div hr.double {
-  border-top-width: 1px;
-  width: 100%;
-  height: 1px;
-  border-bottom: 2px solid #54E775;
-}
-#mod-social-network > div hr.dotted {
-  border-top-width: 1px;
-  border-top-style: dotted;
-}
-#mod-social-network > div .alert-info {
-  padding: 0.5em !important;
-}
-#mod-social-network > div .collapse-button {
-  display: block;
-  border: 1px solid #883996;
-  width: 3.5em;
-  height: 3.5em;
-  margin: auto;
-  border-radius: 50%;
-  padding-top: 0.4em;
-  line-height: 1em;
-}
-#mod-social-network > div .collapse-button:hover {
-  background-color: #ffffff;
-}
-#mod-social-network > div body > div > section > header > div.panel {
-  padding: 1.5em 0;
-}
-#mod-social-network > div #timeline {
-  padding-top: 2em;
-  min-height: 4em;
-}
-#mod-social-network > div .ng-hide-add,
-#mod-social-network > div .ng-hide-remove {
-  max-height: 4em;
-  overflow: hidden;
-  display: none;
-}
-#mod-social-network > div .profile-social {
-  margin-top: 0.5em;
-}
-#mod-social-network > div .profile-social li {
-  padding: 0;
-}
-#mod-social-network > div .edit-profile small {
-  margin: 1.5em 0 0.5em 0;
-  display: block;
-  text-transform: uppercase;
-}
-#mod-social-network > div .edit-profile .input-group {
-  padding-right: 0.2em;
-  margin-bottom: 0.2em;
-}
-#mod-social-network > div .edit-profile .input-group div {
-  min-width: 12em;
-  font-size: 0.8em;
-  text-align: right;
-}
-#mod-social-network > div .edit-profile .input-group div i {
-  float: left;
-}
-#mod-social-network > div .edit-profile form > div {
-  margin-bottom: 1em;
-}
-#mod-social-network > div .post {
-  clear: both !important;
-  color: white !important;
-}
-#mod-social-network > div .profile-followers figure {
-  padding: 0;
-  margin-right: 0.5em;
-}
-#mod-social-network > div .profile-followers li {
-  padding-right: 0;
-  padding-left: 1px;
-}
-#mod-social-network > div .profile-followers h2 {
-  margin: 1em 0;
-  font-size: 1em;
-  text-transform: uppercase;
-}
-#mod-social-network > div .profile-followers .followers {
-  margin-bottom: -1em;
-}
-#mod-social-network > div .form-horizontal label {
-  text-align: right;
-  color: inherit !important;
-}
-#mod-social-network > div .form-horizontal .form-group {
-  padding-bottom: 1em;
-}
-#mod-social-network > div .has-feedback .form-control-feedback.error {
-  display: none;
-}
-#mod-social-network > div .has-success .success {
-  display: block;
-}
-#mod-social-network > div .has-success .form-control-feedback.error {
-  display: none;
-}
-#mod-social-network > div .has-error .success {
-  display: none;
-}
-#mod-social-network > div .has-error .form-control-feedback.error {
-  display: block;
-}
-#mod-social-network > div .btn {
-  box-shadow: -2px 2px 4px #1e1e1e !important;
-}
-#mod-social-network > div .circle {
-  display: block;
-  float: left;
-  text-align: center;
-  line-height: 10px;
-  width: 42px;
-  height: 42px;
-  border-radius: 50%;
-  padding-top: 0.4em;
-  border: 1px solid #883996;
-}
-#mod-social-network > div .circle small {
-  font-size: 0.7em;
-  font-weight: bold;
-}
-#mod-social-network > div .circle:hover {
-  background: #fff;
-}
-#mod-social-network > div .tl-pedalboard .panel {
-  box-shadow: #111 1px 2px 9px;
-  background-color: transparent;
-}
-#mod-social-network > div .tl-pedalboard img {
-  background: url(../img/social/back.png) repeat;
-  border-radius: 5px;
-}
-#mod-social-network > div .plugin {
-  margin-bottom: 1.5em;
-}
-#mod-social-network > div .plugin figure {
-  height: 8em;
-}
-#mod-social-network > div .plugin figure img {
-  max-height: 4em;
-  max-width: 100%;
-}
-#mod-social-network > div .plugin figure figcaption {
-  position: absolute;
-  bottom: 0;
-  font-weight: bold;
-}
-#mod-social-network > div .nav-tabs {
-  border-color: #444;
-}
-#mod-social-network > div .nav-tabs li > * {
-  font-weight: 600 !important;
-  text-transform: uppercase;
-}
-#mod-social-network > div .nav-tabs li.active > *,
-#mod-social-network > div .nav-tabs li.active > a:hover,
-#mod-social-network > div .nav-tabs a:focus {
-  color: #fff !important;
-  background-color: #222 !important;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #222 #222 transparent !important;
-  -moz-border-top-colors: none;
-  -moz-border-right-colors: none;
-  -moz-border-bottom-colors: none;
-  -moz-border-left-colors: none;
-  border-image: none;
-  cursor: default !important;
-}
-#mod-social-network > div .nav-tabs li > .dropdown-menu {
-  background: #444 !important;
-  box-shadow: 0px 2px 5px #000 !important;
-  padding-bottom: 1em !important;
-}
-#mod-social-network > div .nav-tabs li > a:hover {
-  background-color: #e1e1e1;
-  color: #883996;
-  border-color: #444 #444 transparent;
-}
-#mod-social-network > div .modal-content {
-  background: #222 !important;
-  border: 1px solid #444;
-  max-width: 100% !important;
-}
-#mod-social-network > div .modal-header {
-  border-bottom: 0;
-}
-#mod-social-network > div .modal-footer {
-  border-top: 0;
-}
-#mod-social-network > div .modal_s .modal-content {
-  width: 20em !important;
-  margin: auto;
-}
-#mod-social-network > div .modal_m .modal-content {
-  width: 40em !important;
-  margin: auto;
-}
-#mod-social-network > div input,
-#mod-social-network > div textarea {
-  font-family: monospace !important;
-}
-#mod-social-network > div .footer {
-  margin-top: 80px;
-}
-#mod-social-network > div .footer .footer-inner {
-  padding: 40px 0;
-  border-top: 1px solid #DDD;
-}
-#mod-social-network > div .footer .social {
-  float: right;
-  margin: 0;
-  list-style: none;
-}
-#mod-social-network > div .footer .social li {
-  float: left;
-  margin-left: 20px;
-}
-@media (max-width: 767px) {
-  #mod-social-network > div h2 {
-    clear: both !important;
-  }
-  #mod-social-network > div .post .gravatar {
-    width: 2em !important;
-  }
-}
-#mod-social-network > div #loading-bar .bar {
-  -webkit-transition: width 350ms;
-  -moz-transition: width 350ms;
-  -o-transition: width 350ms;
-  transition: width 350ms;
-  background: #54E775;
-  position: fixed;
-  z-index: 10002;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  border-bottom-right-radius: 1px;
-  border-top-right-radius: 1px;
-}
-#mod-social-network > div #loading-bar .peg {
-  position: absolute;
-  width: 70px;
-  right: 0;
-  top: 0;
-  height: 2px;
-  -moz-box-shadow: #54E775 1px 0 6px 1px;
-  -ms-box-shadow: #54E775 1px 0 6px 1px;
-  -webkit-box-shadow: #54E775 1px 0 6px 1px;
-  box-shadow: #54E775 1px 0 6px 1px;
-  -moz-border-radius: 100%;
-  -webkit-border-radius: 100%;
-  border-radius: 100%;
-}
-#mod-social-network > div #loading-bar-spinner .spinner-icon {
-  width: 2em;
-  height: 2em;
-  border: solid 4px transparent;
-  border-top-color: #54E775;
-  border-left-color: #54E775;
-  border-radius: 50%;
-  -webkit-animation: loading-bar-spinner 400ms linear infinite;
-  -moz-animation: loading-bar-spinner 400ms linear infinite;
-  -ms-animation: loading-bar-spinner 400ms linear infinite;
-  -o-animation: loading-bar-spinner 400ms linear infinite;
-  animation: loading-bar-spinner 400ms linear infinite;
-}
-@-webkit-keyframes loading-bar-spinner {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@-moz-keyframes loading-bar-spinner {
-  0% {
-    -moz-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -moz-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@-o-keyframes loading-bar-spinner {
-  0% {
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@-ms-keyframes loading-bar-spinner {
-  0% {
-    -ms-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes loading-bar-spinner {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
 #cloud-plugins-library {
   background: #2c2c2c;
   bottom: 45px;
@@ -6310,6 +5768,14 @@ button.close {
 }
 .cloud-plugins .cloud-plugin .status.blocked:after {
   content: "not installed";
+}
+.cloud-plugins .cloud-plugin .status.unstable {
+  border: 1px solid red;
+  background-color: red;
+  color: #212121;
+}
+.cloud-plugins .cloud-plugin .status.unstable:after {
+  content: "unstable";
 }
 .cloud-plugins .cloud-plugin .actions {
   font-size: 11px;
@@ -7417,9 +6883,6 @@ hr.dotted {
 }
 #main-menu #mod-cloud {
   background-image: url(../img/icons/36/cloud.png);
-}
-#main-menu #mod-update {
-  background-image: url(../img/icons/36/update.png);
 }
 #cloud_install_all {
   background-image: url(../img/icons/36/save.png);
