--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -7,4 +7,7 @@
         <p class="{{has_comment}}">{{comment}}<span class="limiter"></span></p>
     </div>
     <span class="status {{status}}"></span>
+    {{^stable}}
+    <span class="status unstable"></span>
+    {{/stable}}
 </div>
