--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -255,9 +255,8 @@
          }
        }
        .status.unstable {
-         border: 1px solid red;
-         background-color: red;
-         color: #212121;
+         border: 1px solid #FF2927;
+         background-color: #FF2927;
          &:after {
            content: "unstable";
          }
