Force pedalboard name to use a single line in pedalboards window

--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -126,6 +126,7 @@
         font-weight: bold;
         overflow: hidden;
         position: relative;
+        height: 32px;
       }
       .description {
         display: block;
