--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -342,7 +342,7 @@ hr.dotted {
     color: #666;
     display: none;
   }
-  #mod-add-midi,
+  #mod-show-midi-port,
   .mod-bypass,
   #mod-cpu, #mod-ram, #mod-xruns, #mod-buffersize {
     background-position: 8px 50%;
@@ -364,7 +364,7 @@ hr.dotted {
       background-color: #333;
     }
   }
-  #mod-add-midi {
+  #mod-show-midi-port {
     background-image: url(../img/icons/25/midi.png);
   }
   .mod-bypass {
