--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -221,16 +221,20 @@
           overflow: hidden;
         }
       }
+      .status-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        text-align: right;
+        padding-right: 2px;
+      }
       .status {
-         display: block;
          padding: 1px 4px;
          text-align: center;
          text-transform: uppercase;
          font-weight: bold;
          font-size: 9px;
-         position: absolute;
-         top: 3px;
-         right: 8px;
        }
        .status.installed {
          border: 1px solid @brand-success;
