--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -13,6 +13,9 @@
         {{^stable}}
         <span class="status unstable"></span>
         {{/stable}}
+        {{#demo}}
+        <span class="status demo"></span>
+        {{/demo}}
         {{#installed}}
         <span class="status installed"></span>
         {{/installed}}
