--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -573,7 +573,7 @@ header#pedalboard-actions,
         background-size: 30px 30px;
     }
     &.js-reset {
-        background-image: url(../img/icons/25/remove.png);
+        background-image: url(../img/icons/25/new.png);
         &:hover, &.selected {
             background-color: @brand-primary;
         }
