--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -221,51 +221,6 @@
           overflow: hidden;
         }
       }
-      .status-container {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        text-align: right;
-        padding-right: 2px;
-      }
-      .status {
-         padding: 1px 4px;
-         text-align: center;
-         text-transform: uppercase;
-         font-weight: bold;
-         font-size: 9px;
-         margin-left: 2px;
-       }
-       .status.installed {
-         border: 1px solid @brand-success;
-         background-color: @brand-success;
-         &:after {
-           content: "installed";
-         }
-       }
-       .status.outdated {
-         border: 1px solid @brand-warning;
-         background-color: @brand-warning;
-         color: #212121;
-         &:after {
-           content: "new version";
-         }
-       }
-       .status.unstable {
-         border: 1px solid #FF2927;
-         background-color: #FF2927;
-         &:after {
-           content: "unstable";
-         }
-       }
-      .status.demo {
-         border: 1px solid #235789;
-         background-color: #235789;
-         &:after {
-           content: "demo";
-         }
-       }
 
       .actions {
         font-size: 11px;
@@ -281,5 +236,54 @@
        .actions span.duplicate {
         margin: 0 6px;
       }
+  }
+}
+
+.plugin-container {
+  .status-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: right;
+    padding-right: 2px;
+  }
+  .status {
+    padding: 1px 4px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 9px;
+    margin-left: 2px;
+  }
+  .status.installed {
+    border: 1px solid @brand-success;
+    background-color: @brand-success;
+    &:after {
+      content: "installed";
+    }
+  }
+  .status.outdated {
+    border: 1px solid @brand-warning;
+    background-color: @brand-warning;
+    color: #212121;
+    &:after {
+      content: "new version";
+    }
+  }
+  .status.unstable {
+    border: 1px solid #FF2927;
+    background-color: #FF2927;
+    &:after {
+      content: "unstable";
+    }
+  }
+  .status.demo {
+    border: 1px solid #235789;
+    background-color: #235789;
+    color: #FFFFFF;
+    &:after {
+      content: "demo";
+    }
   }
 }
