- Added tooltip for demo plugins in list

--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -14,7 +14,7 @@
         <span class="status unstable"></span>
         {{/stable}}
         {{#demo}}
-        <span class="status demo"></span>
+        <span class="status demo" title="This plugin is for demo purposes only and shall not be used live or in a studio"></span>
         {{/demo}}
     </div>
 </div>
