- Increased demo label size for plugin details - Show demo disclaimer below label

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7669,6 +7669,12 @@ header#pedalboard-actions {
   color: white;
   margin-bottom: 10px;
 }
+.plugin-info .status.demo {
+  display: inline-block;
+  padding: 5px 12px;
+  margin: 2px 0;
+  font-size: 0.7em;
+}
 .clearfix:after,
 .container:after,
 .dl-horizontal dd:after,
