--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -12,7 +12,8 @@
                         <h1>{{name}}</h1>
                         {{#demo}}
                         <div style="margin-bottom: 5px;">
-                            <span class="status demo" style="margin: 0;" title="This plugin is for demo purposes only and shall not be used live or in a studio"></span>
+                            <span class="status demo"></span>
+                            <span style="display: block;">This plugin is for demo purposes only and shall not be used live or in a studio.</span>
                         </div>
                         {{/demo}}
                         <br/>
