--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -287,3 +287,12 @@
     }
   }
 }
+
+.plugin-info {
+  .status.demo {
+    display: inline-block;
+    padding: 5px 12px;
+    margin: 2px 0;
+    font-size: 0.7em;
+  }
+}
