- Fixed plugin info button consistency

--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -35,7 +35,7 @@
                     </header>
                     <p>{{comment}}</p>
                     {{#pedalboard_href}}
-                    <a target="_blank" href="{{pedalboard_href}}" class="pedalboard-href"><span>See it in action</span></a>
+                    <a target="_blank" href="{{pedalboard_href}}" class="btn btn-info pedalboard-href"><span>See it in action</span></a>
                     {{/pedalboard_href}}
                     <div class="plugin-controlports">
                         <p><strong>CONTROL PORTS:</strong></p>
