--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7513,7 +7513,7 @@ header#pedalboard-actions {
   color: #fff;
   font-size: 14px;
 }
-.plugin-info .version button {
+.plugin-info .btn {
   font-weight: bold;
   margin-top: 6px;
   text-transform: uppercase;
@@ -7664,9 +7664,6 @@ header#pedalboard-actions {
 }
 .plugin-info .pedalboard-href {
   display: inline-block;
-  padding: 10px;
-  background: #883996;
-  color: white;
   margin-bottom: 10px;
 }
 .plugin-info .status.demo {
