--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -1170,6 +1170,12 @@ header#pedalboard-actions {
       display: inline-block;
       margin-bottom: 10px;
     }
+    .status.demo {
+      display: inline-block;
+      padding: 5px 10px;
+      margin: 2px 0;
+      font-size: 0.7em;
+    }
 }
 
 
