--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -868,6 +868,12 @@ header#pedalboard-actions {
         margin: 0 auto;
         width: 16px;
       }
+      .plugins-wrapper .plugin .status.demo {
+        display: inline-block;
+        width: auto;
+        height: auto;
+        margin: 0;
+      }
       .plugins-wrapper .plugin .status.installed {
         background-image: url(../img/icn-installed.png);
         background-position: center center;
@@ -916,6 +922,13 @@ header#pedalboard-actions {
       }
       .plugins-wrapper .plugin .downloads {
         display: block;
+      }
+      .plugins-wrapper .plugin .demo-container {
+        position: absolute;
+        left: 0;
+        bottom: 3px;
+        right: 0;
+        text-align: center;
       }
     }
   }
