- Added favorite plugin toggle button

--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -10,6 +10,7 @@
                 <div class="plugin-description">
                     <header>
                         <h1>{{name}}</h1>
+                        <a class="favorite-button" title="Favorite Plugin"></a>
                         <br/>
                         <p>
                             <b>URI:</b> {{uri}}<br/>
