--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6361,13 +6361,13 @@ button.close {
   bottom: 45px;
   overflow: auto;
   background: #111111 url(../img/watermark.png) 100% 100% no-repeat;
-  padding-top: 1.5%;
+  padding-top: 1%;
 }
 #pedalboards-library .pedalboards .pedalboard {
   color: #fff;
   float: left;
-  margin: 0 0 1.5% 1.5%;
-  width: 31.3%;
+  margin: 0 0 1% 1%;
+  width: 18.8%;
   position: relative;
   background-color: transparent;
   background-image: url(../img/background.jpg);
@@ -6385,7 +6385,7 @@ button.close {
   border: 1px solid #000;
   display: block;
   width: 100%;
-  height: 15vw;
+  height: 10vw;
   overflow: hidden;
   text-align: center;
   background-image: url(../img/loading-pedalboard.gif);
@@ -6426,6 +6426,7 @@ button.close {
   overflow: hidden;
   position: relative;
   height: 32px;
+  left: 5px;
 }
 #pedalboards-library .pedalboards .pedalboard .description {
   display: block;
