Fix category inline display on small browser windows

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7260,6 +7260,10 @@ header#pedalboard-actions {
   padding: 10px 0 0 0;
   position: relative;
   width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
 #plugins-library ul li {
   background: rgba(17, 17, 17, 0.66);
