Change 'Advanced' to 'Extended'

--- a/html/include/bypass_addressing.html
+++ b/html/include/bypass_addressing.html
@@ -9,7 +9,7 @@
                     <select class="form-control" name="actuator"></select>
                 </div>
             </div>
-            <label class="label-toggle" for="toggle-address"><a>Advanced</a></label>
+            <label class="label-toggle" for="toggle-address"><a>Extended</a></label>
             <div>
                 <br /><br />
                 <input class="checkbox-toggle" type="checkbox" id="toggle-address" />
