--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -10,7 +10,7 @@
                 </div>
             </div>
             <span class="midi-learn-hint" style="display: none;">To continue click "save" then move any controller in your MIDI device</span>
-            <label class="label-toggle" for="toggle-address"><a>Advanced</a></label>
+            <label class="label-toggle" for="toggle-address"><a>Extended</a></label>
             <div>
                 <br /><br />
                 <input class="checkbox-toggle" type="checkbox" id="toggle-address" />
