--- a/html/include/bypass_addressing.html
+++ b/html/include/bypass_addressing.html
@@ -1,7 +1,8 @@
 <div class="mod-pedal-settings-address">
     <div class="mod-box">
-        <h1>{{label}} - <strong>{{name}}</strong></h1>
-        <hr />
+        <h1 class="pull-left">{{label}} - <strong>{{name}}</strong></h1><span class="js-close close">&times;</span>
+        <div class="clearfix"></div>
+        <hr style="margin-top:0px" />
         <form class="bottom form">
             <div class="mod form-group clearfix">
                 <label>Actuator</label>
