Start work to show connected CC device list

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -448,7 +448,9 @@ hr.dotted {
       background-image: url(../img/icons/36/disconnect.png);
     }
   }
-  #mod-cloud {
+
+  #mod-devices {
+    /* FIXME */
     background-image: url(../img/icons/36/cloud.png);
   }
 }
