Use custom icons and messages for specific devices

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -451,7 +451,19 @@ hr.dotted {
 
   #mod-devices {
     /* FIXME */
-    background-image: url(../img/icons/36/cloud.png);
+    background-image: url(../img/icons/36/disconnect.png);
+    &.ico_cpu {
+      background-image: url(../img/icons/36/cpu.png);
+    }
+    &.ico_faders {
+      background-image: url(../img/icons/36/faders.png);
+    }
+    &.ico_knob {
+      background-image: url(../img/icons/36/knob.png);
+    }
+    &.ico_switch {
+      background-image: url(../img/icons/36/footswitch.png);
+    }
   }
 }
 
