--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6890,7 +6890,19 @@ hr.dotted {
 }
 #main-menu #mod-devices {
   /* FIXME */
-  background-image: url(../img/icons/36/cloud.png);
+  background-image: url(../img/icons/36/disconnect.png);
+}
+#main-menu #mod-devices.ico_cpu {
+  background-image: url(../img/icons/36/cpu.png);
+}
+#main-menu #mod-devices.ico_faders {
+  background-image: url(../img/icons/36/faders.png);
+}
+#main-menu #mod-devices.ico_knob {
+  background-image: url(../img/icons/36/knob.png);
+}
+#main-menu #mod-devices.ico_switch {
+  background-image: url(../img/icons/36/footswitch.png);
 }
 #cloud_install_all {
   background-image: url(../img/icons/36/save.png);
