Small tweak on plugin-info dialog

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -968,6 +968,7 @@ header#pedalboard-actions {
     z-index: 40;
     .box {
       margin-top: 3em;
+      margin-bottom: 3em;
       background-color: #111;
       padding: 15px;
       border: 2px solid #333;
@@ -1001,7 +1002,6 @@ header#pedalboard-actions {
       height: 100%;
       display: block;
       position: a;
-      padding-bottom: 20%;
       padding-left: 45px;
       @gradient1: rgba(17,17,17,0.1);
       @gradient2: rgba(17,17,17,1);
