--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7461,6 +7461,7 @@ header#pedalboard-actions {
 }
 .plugin-info .box {
   margin-top: 3em;
+  margin-bottom: 3em;
   background-color: #111;
   padding: 15px;
   border: 2px solid #333;
@@ -7506,7 +7507,6 @@ header#pedalboard-actions {
   height: 100%;
   display: block;
   position: a;
-  padding-bottom: 20%;
   padding-left: 45px;
   background: -moz-linear-gradient(left, rgba(17, 17, 17, 0.1) 1em, #111111 2em);
   background: -webkit-gradient(linear, left top, right top, color-stop(1em, rgba(17, 17, 17, 0.1)), color-stop(2em, #111111));
