--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -649,8 +649,6 @@ header#pedalboard-actions {
   color: black;
   font-size: 15px;
   max-height: 350px;
-  max-width: 450px;
-  min-width: 350px;
   overflow: auto;
   position: absolute;
   right: 10px;
@@ -665,6 +663,16 @@ header#pedalboard-actions {
     background-color: #8888ff;
     height: 20px;
   }
+}
+
+#mod-devices-window {
+  max-width: 600px;
+  min-width: 500px;
+}
+
+#mod-upgrade {
+  max-width: 450px;
+  min-width: 350px;
 }
 
 #plugins-library {
