Add "see online" button to plugin info dialog

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -1222,7 +1222,7 @@ header#pedalboard-actions {
         }
       }
     }
-    .pedalboard-href {
+    .online-button-href {
       display: inline-block;
       margin-bottom: 10px;
     }
