--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7720,7 +7720,7 @@ header#pedalboard-actions {
 .plugin-info .favorite-button.favorite:hover {
   opacity: 1;
 }
-.plugin-info .pedalboard-href {
+.plugin-info .online-button-href {
   display: inline-block;
   margin-bottom: 10px;
 }
