--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -342,8 +342,7 @@ hr.dotted {
     color: #666;
     display: none;
   }
-  #mod-show-midi-port,
-  .mod-bypass,
+  #mod-show-midi-port, #mod-transport-icon, .mod-bypass,
   #mod-cpu, #mod-ram, #mod-xruns, #mod-buffersize {
     background-position: 8px 50%;
     background-repeat: no-repeat;
@@ -366,6 +365,15 @@ hr.dotted {
   }
   #mod-show-midi-port {
     background-image: url(../img/icons/25/midi.png);
+  }
+  #mod-transport-icon {
+    background-image: url(../img/icons/25/midi.png);
+    font-family: monospace;
+    width: 10.5em !important;
+    text-align: right;
+    &.playing {
+      background-color: @brand-primary;
+    }
   }
   .mod-bypass {
     background-image: url(../img/icons/25/bypass.png);
@@ -660,6 +668,15 @@ header#pedalboard-actions {
 #mod-upgrade {
   max-width: 450px;
   min-width: 350px;
+}
+
+#mod-transport-window {
+  bottom: 50px;
+  right: 460px;
+  top: initial;
+  left: initial;
+  background: rgba(17, 17, 17, 0.9);
+  padding: 50px 40px 15px 40px;
 }
 
 #plugins-library {
