Custom transport icon

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -367,7 +367,7 @@ hr.dotted {
     background-image: url(../img/icons/25/midi.png);
   }
   #mod-transport-icon {
-    background-image: url(../img/icons/25/midi.png);
+    background-image: url(../img/icons/25/transport.png);
     font-family: monospace;
     width: 10.5em !important;
     text-align: right;
