--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6814,7 +6814,7 @@ hr.dotted {
   background-image: url(../img/icons/25/midi.png);
 }
 #main-menu #mod-transport-icon {
-  background-image: url(../img/icons/25/midi.png);
+  background-image: url(../img/icons/25/transport.png);
   font-family: monospace;
   width: 10.5em !important;
   text-align: right;
