fetch product information from shopify and show price on plugin info box

--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -11,6 +11,7 @@
                     <header>
                       <h1>{{name}}</h1>
                         {{#shopify_id}}
+                        <div id='product-price-{{shopify_id}}'></div>
                         <div id='product-component-{{shopify_id}}'></div>
                         {{/shopify_id}}
                         {{#installed}}
