--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -13,6 +13,12 @@
         {{^stable}}
         <span class="status unstable"></span>
         {{/stable}}
+        {{#price}}
+        <span class="price">{{price}}</span>
+        {{/price}}
+        {{#licensed}}
+        <span class="licensed"></span>
+        {{/licensed}}
         {{#demo}}
         <span class="status demo" title="This plugin is for demo purposes only and shall not be used live or in a studio"></span>
         {{/demo}}
