--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -1,4 +1,14 @@
 <div class="js-close plugin-info plugin-container">
+    {{#price}}
+    <div class="description-price-container">
+        <div class="description-price">{{price}}</div>
+    </div>
+    {{/price}}
+    {{#licensed}}
+    <div class="description-price-container">
+        <div class="description-licensed"></div>
+    </div>
+    {{/licensed}}
     <div class="container box">
         <span class="js-close alignright btn btn-mini btn-danger">Close</span>
         <div class="row-fluid clearfix">
@@ -10,10 +20,6 @@
                 <div class="plugin-description">
                     <header>
                       <h1>{{name}}</h1>
-                        {{#shopify_id}}
-                        <div id='product-price-{{shopify_id}}'></div>
-                        <div id='product-component-{{shopify_id}}'></div>
-                        {{/shopify_id}}
                         {{#installed}}
                         <a class="favorite-button {{favorite_class}}" title="Favorite Plugin"></a>
                         {{/installed}}
@@ -41,9 +47,16 @@
                             <span class="js-installed-version">
                                 Installed Version: <span class="bold">{{installed_version}}</span><br/>
                             </span>
+                            <table><tr><td>
                             <button class="js-install btn btn-info btn-mini">Install</button>
                             <button class="js-upgrade btn btn-info btn-mini">Upgrade</button>
                             <button class="js-remove btn btn-danger btn-mini">Remove</button>
+                            </td>
+                            {{#shopify_id}}
+                            <td>&nbsp;</td>    
+                            <td><div class="buy-button" id='product-component-{{shopify_id}}'></div></td>
+                            {{/shopify_id}}
+                            </tr></table>
                         </p>
                     </header>
                     <p>{{comment}}</p>
