DEMO watermark over plugin's icon in constructor

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -1426,6 +1426,11 @@ header#pedalboard-actions {
   z-index: 20;
 }
 
+.demo-plugin {
+    background: url("/img/demo.svg") no-repeat center center;
+    background-size: contain;
+}
+
 .actions {
   z-index: 20;
 }
