demo watermark in all plugin icons that appear in UI

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -1431,6 +1431,16 @@ header#pedalboard-actions {
     background-size: contain;
 }
 
+.demo-mask {
+    width: 100%;
+    height: 100%;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    position: absolute;
+}
+
 .actions {
   z-index: 20;
 }
