--- a/html/css/main.css
+++ b/html/css/main.css
@@ -8000,6 +8000,15 @@ header#pedalboard-actions {
   background: url("/img/demo.svg") no-repeat center center;
   background-size: contain;
 }
+.demo-mask {
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+}
 .actions {
   z-index: 20;
 }
