- watermark opacity control is now in CSS, so we can have different opacity   values depending on element. - watermark is now "TRIAL" and is less proeminent in constructor.

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -1427,8 +1427,9 @@ header#pedalboard-actions {
 }
 
 .demo-plugin {
-    background: url("/img/demo.svg") no-repeat center center;
+    background: url("/img/trial.svg") no-repeat center center;
     background-size: contain;
+    opacity: 0.4;
 }
 
 .demo-mask {
@@ -1439,6 +1440,10 @@ header#pedalboard-actions {
     top: 0;
     bottom: 0;
     position: absolute;
+}
+
+.demo-plugin-light {
+    opacity: 0.1 !important;
 }
 
 .actions {
