--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7997,8 +7997,9 @@ header#pedalboard-actions {
   z-index: 20;
 }
 .demo-plugin {
-  background: url("/img/demo.svg") no-repeat center center;
+  background: url("/img/trial.svg") no-repeat center center;
   background-size: contain;
+  opacity: 0.4;
 }
 .demo-mask {
   width: 100%;
@@ -8008,6 +8009,9 @@ header#pedalboard-actions {
   top: 0;
   bottom: 0;
   position: absolute;
+}
+.demo-plugin-light {
+  opacity: 0.1 !important;
 }
 .actions {
   z-index: 20;
