--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -18,7 +18,9 @@
         <span class="status unstable"></span>
         {{/stable}}
         {{#price}}
-        <span class="price">{{price}}</span>
+        <span class="price-container">
+          <span class="price">{{price}}</span>
+        </span>
         {{/price}}
         {{#licensed}}
         <span class="licensed"></span>
