--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -162,6 +162,21 @@
           left: 10px;
           background-position: 0% 50%;
         }
+        div.demo-plugin {
+          opacity: 0;
+        }
+        span.price {
+          position: absolute;
+          top: 25px;
+          margin-left: 98px;
+          padding: 3px 0;
+          transform: rotate(0deg) scale(1.3);
+          width: 80px;
+        }
+        span.price-container {
+          margin-left: 170px;
+          width: 200px;
+        }
       }
       figure {
         height: 100px;
@@ -173,6 +188,12 @@
         background-position: 50% 50%;
         background-repeat: no-repeat;
         margin: 0;
+        transition: all 0.33s linear;
+      }
+      span.price {
+        transition: all 0.33s linear;
+      }
+      span.price-container {
         transition: all 0.33s linear;
       }
       .description {
@@ -240,7 +261,6 @@
 }
 
 .plugin-container {
-  overflow: hidden;
   .status-container {
     position: absolute;
     top: 0;
@@ -271,6 +291,14 @@
     &:after {
       content: "new version";
     }
+  }
+  .price-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 75px;
+    height: 75px;
+    overflow: hidden;
   }
   .price {
       background-color: @brand-success;
